# transient-pipeline-flow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ambientfluid_8hpp_source.html  annotated.html  annotated_dup.js  batchtracking_8hpp_source.html  batchtrackingstate_8hpp_source.html  boundaryconditions_8hpp_source.html  burialmedium_8hpp_source.html  bwrs_8hpp_source.html  classAmbientFluid-members.html  classAmbientFluid.html  classAmbientFluid.js  classBWRS-members.html  classBWRS.html  classBWRS.js  classBatchTracking-members.html  classBatchTracking.html  classBatchTracking.js  classBatchTrackingState-members.html  classBatchTrackingState.html  classBatchTrackingState.js  classBoundaryConditions-members.html  classBoundaryConditions.html  classBoundaryConditions.js  classBoundaryConditions_1_1SingleCondition-members.html  classBoundaryConditions_1_1SingleCondition.html  classBoundaryConditions_1_1SingleCondition.js  classBurialMedium-members.html  classBurialMedium.html  classBurialMedium.js  classComposition-members.html  classComposition.html  classComposition.js  classDiscretizer-members.html  classDiscretizer.html  classDiscretizer.js  classDummyGas-members.html  (+252 more)
.devcontainer/: Dockerfile  devcontainer.json
cmake/Modules/: FindSuperLU.cmake
doc/: CMakeLists.txt  Doxyfile.in  compilation.md  directory_structure.md  main_page.md  manual.md  variables_and_targets.md
examples/: CMakeLists.txt  advanced_simulation.cpp  boundary_conditions_from_file.cpp  heat_capacity.cpp  old_main.cpp  simple_simulation.cpp  temperature.csv
res/equationofstate/bwrs/: JFH_binaryInteraction.csv  StarlingABparameters.csv  StarlingBinaryInteraction.csv  TGNET_AB.csv  TGNET_binaryInteractionCoefficients.csv  calsepABparameters.csv  calsepBinaryInteraction.csv
res/equationofstate/gerg04/: Fij.h5  beijexp.h5  betat.h5  betav.h5  coiexp.h5  dijexp.h5  dijpol.h5  doiexp.h5  doipol.h5  epijexp.h5  gaijexp.h5  gammat.h5  gammav.h5  nijexp.h5  nijpol.h5  noiexp.h5  noik.h5  noipol.h5  nuijexp.h5  tijexp.h5  tijpol.h5  toiexp.h5  toipol.h5  voik.h5
res/examples/: bc-no_composition.csv  bc-with_composition.csv
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  (+47 more)
src/: composition.cpp  composition.hpp  config.hpp  constants.hpp  physics.cpp  physics.hpp  pipeline.cpp  pipeline.hpp  sampler.cpp  sampler.hpp  simulator.cpp  simulator.hpp  timeseries.cpp  timeseries.hpp  transflow.hpp
src/advection/: batchtracking.cpp  batchtracking.hpp  batchtrackingstate.cpp  batchtrackingstate.hpp
src/equationofstate/: bwrs.cpp  bwrs.hpp  dummygas.hpp  equationofstate.cpp  equationofstate.hpp  equationofstatebase.cpp  equationofstatebase.hpp  gerg04.cpp  gerg04.hpp  idealgas.hpp
src/heattransfer/: ambientfluid.cpp  ambientfluid.hpp  burialmedium.cpp  burialmedium.hpp  fixedqvalue.hpp  fixeduvalue.hpp  heattransfer.cpp  heattransfer.hpp  heattransferbase.cpp  heattransferbase.hpp  heattransferstate.cpp  heattransferstate.hpp  material.cpp  material.hpp  pipewall.cpp  pipewall.hpp  radial.cpp  radial.hpp  steadystate.cpp  steadystate.hpp  unsteady.cpp  unsteady.hpp  utils.cpp  utils.hpp
src/solver/: boundaryconditions.cpp  boundaryconditions.hpp  governingequationsolver.cpp  governingequationsolver.hpp  matrixequation.cpp  matrixequation.hpp  solver.cpp  solver.hpp
src/solver/discretizer/: discretizer.cpp  discretizer.hpp  enthalpy.cpp  enthalpy.hpp  internalenergy.cpp  internalenergy.hpp
src/utilities/: errors.hpp  linearinterpolator.cpp  linearinterpolator.hpp  numerics.cpp  numerics.hpp  physics.cpp  physics.hpp  stringbuilder.hpp  utilities.cpp  utilities.hpp
test/: CMakeLists.txt  debug.cpp  debug.hpp  test_batchtracking.cpp  test_boundaryconditions.cpp  test_composition.cpp  test_constants.cpp  test_discretizer_enthalpy.cpp  test_discretizer_internalenergy.cpp  test_eos.cpp  test_eos_bwrs.cpp  test_eos_gerg04.cpp  test_eos_idealgas.cpp  test_governingequationsolver.cpp  test_heat_radial.cpp  test_heat_steadystate.cpp  test_heat_unsteady.cpp  test_heattransfer.cpp  test_linearinterpolator.cpp  test_materials.cpp  test_matrix_equation.cpp  test_phys_utils.cpp  test_physics.cpp  test_pipeline.cpp  test_sampler.cpp  test_simulator.cpp  test_solver.cpp  test_timeseries.cpp  test_utils.cpp
tools/: README.md  profile_slider.py
